syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message CountMessage {
    int64 firstValue = 1;
    int64 lastValue = 2;
    int64 currentValue = 3;
}

message Empty {}

service RemoteCountService {
    rpc pushValue(CountMessage) returns (stream CountMessage);
}
